# w2a

./: ADOPTERS.md  GOVERNANCE.md  README.md
integrations/langchain/: tool.py
integrations/langchain-w2a/: .gitignore  README.md  pyproject.toml
integrations/langchain-w2a/langchain_w2a/: __init__.py  toolkit.py  tools.py
integrations/langchain-w2a/tests/: conftest.py
integrations/langchain-w2a/tests/integration_tests/: test_tools.py
integrations/langchain-w2a/tests/unit_tests/: test_tools.py
sdk/javascript/: package.json
sdk/javascript/src/: index.ts
sdk/mcp/: package.json
sdk/mcp/src/: index.js
sdk/python/: README.md  pyproject.toml
sdk/python/w2a/: __init__.py  client.py  exceptions.py  models.py
spec/: v0.1.md
